Some indexers need non-slash trailed path

Fix regression introduced in 73183acf, prior to this commit all path
from KInotify did not have a trailing slash, adjust in consequence.

9b61371fdefbd538938f20cdc87eed03d170fa5b adjusted BasicIndexingJob but
not the other cases.

Add some missing unit test cases, although they don't cover the bug
cases, they allow to illustrate the crash conditions.

BUG: 478854