src/file/newfileindexer.cpp
@@ -34,8 +34,11 @@ void NewFileIndexer::run()
 
     Transaction tr(m_db, Transaction::ReadWrite);
 
-    for (const QString& filePath : std::as_const(m_files)) {
-        Q_ASSERT(!filePath.endsWith(QLatin1Char('/')));
+    for (const QString &path : m_files) {
+        auto filePath = path;
+        if (filePath.endsWith(QLatin1Char('/'))) {
+            filePath.chop(1);
+        }
 
         QString mimetype;
         QFileInfo fileInfo(filePath);
